--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungBearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungBearbeiten.html.twig
@@ -125,6 +125,8 @@
                 <td>{{ form_errors(form.SpracheSonstiges) }}</td>
             </tr>
             {{ form_row(form.literatur) }}
+            {% block voraussetzung %}
+            {% endblock voraussetzung %}
             {{ form_row(form.voraussetzungInh) }}
             {{ form_row(form.lehrveranstaltungen) }}
             {{ form_row(form.pruefungsformen) }}
