User De/Re Aktivierung

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/benutzerVerwaltung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/benutzerVerwaltung.html.twig
@@ -10,7 +10,7 @@
 
     <div class="table-responsive">
             <ul>
-                <li><a href="{{ path('benutzerErstellen') }}">Nutzer anlegen</a></li>
+                <li><a href="{{ path('benutzerErstellen') }}">Neuen Nutzer anlegen</a></li>
             </ul>
 
         <table class="table table-bordered">
