Änderungs wünsche Schmidt

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/modulBearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/modulBearbeiten.html.twig
@@ -69,5 +69,5 @@
              </li>
          {% endfor %}
      </ul>
-     <a id="add-another-lehrende">Lehrenden hinzufügen</a>
+     <a style="padding-left: 40px" id="add-another-lehrende">Lehrenden hinzufügen</a>
 {% endblock lehrende %}
