--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungUebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungUebersicht.html.twig
@@ -11,7 +11,7 @@
     </script>
     <div class="table-responsive">
         <ul>
-            <li><a href="{{ path('planungErstellen') }}">Neue Planung erstellen</a></li>
+            <li><a href="{{ path('planungErstellen') }}">Neues Modul plane</a></li>
         </ul>
         {% if planungen is not empty %}
             <table id="table" class="table table-bordered tablesorter">
