PDF als Datei auf Server (3) -  finished

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModulListe.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModulListe.html.twig
@@ -1,5 +1,10 @@
 {% extends 'FHBingenMHBBundle::layout.html.twig' %}
 
+{#
+    mhbModulListe.html.twig deprecated
+    TODO: löschen
+#}
+
 {% block content %}
     <script type="text/javascript">
         $(document).ready(function () {
