--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModul.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModul.html.twig
@@ -153,7 +153,7 @@
             <td>4</td>
             <td colspan="6">
                 <div class="key">Lehrform</div>
-                {{ modulBeschreibung.getAngebot().getVeranstaltung().getKontaktzeitVL()/15 }} SWS Vorlesung, {{ modulBeschreibung.getAngebot().getVeranstaltung().getKontaktzeitVL()/15 }} SWS
+                {{ modulBeschreibung.getAngebot().getVeranstaltung().getKontaktzeitVL()/15 }} SWS Vorlesung, {{ modulBeschreibung.getAngebot().getVeranstaltung().getKontaktzeitSonstige()/15 }} SWS
                 begleitende Übung
             </td>
         </tr>
