--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModul.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModul.html.twig
@@ -154,7 +154,7 @@
             <td colspan="6">
                 <div class="key">Lehrform</div>
                 {{ modulBeschreibung.getAngebot().getVeranstaltung().getKontaktzeitVL()/15 }} SWS Vorlesung, {{ modulBeschreibung.getAngebot().getVeranstaltung().getKontaktzeitSonstige()/15 }} SWS
-                begleitende Übung
+                sonstige Kontaktzeit
             </td>
         </tr>
         <tr>
