--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/modulBearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/modulBearbeiten.html.twig
@@ -51,7 +51,7 @@
 {% endblock beauftragter %}
 
 {% block voraussetzung %}
-    {{ form_row(form.modul_) }}
+    {{ form_row(form.modulVoraussetzung) }}
 {% endblock voraussetzung %}
 
 {% block lehrende %}
