--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/modulBearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/modulBearbeiten.html.twig
@@ -3,11 +3,17 @@
 {% block jsBlock %}
     <script type="text/javascript">
         var lehrendeCount = '{{ form.lehrende|length }}';
+        var voraussetzungCount = '{{ form.modulX|length }}';
 
         jQuery(document).ready(function () {
             jQuery('#add-another-lehrende').click(function (e) {
                 e.preventDefault();
                 return addAnotherLehrende();
+            });
+
+            jQuery('#add-another-voraussetzung').click(function (e) {
+                e.preventDefault();
+                return addAnotherVoraussetzung();
             });
 
             <!-- navbar highlighting -->
@@ -38,7 +44,30 @@
             lehrendeCount++;
         }
 
-        {# TODO: JavaScript dass Kontaktzeiten mit Leistungspunkten abgleicht #}
+        function addAnotherVoraussetzung(){
+            var voraussetzungList = jQuery('#voraussetzung-fields-list');
+
+            // grab the prototype template
+            var newWidget = voraussetzungList.attr('data-prototype');
+            // replace the "__name__" used in the id and name of the prototype
+            // with a number that's unique to your emails
+            // end name attribute looks like name="contact[emails][2]"
+            newWidget = newWidget.replace(/__name__/g, voraussetzungCount);
+
+            // create a new list element and add it to the list
+            var newLi = jQuery('<li></li>').html(newWidget);
+
+            var link = jQuery('<a href="#">Voraussetzung entfernen</a>');
+            link.click(function(e){
+                e.preventDefault();
+                newLi.remove();
+            });
+
+            newLi.append(link);
+            newLi.appendTo(voraussetzungList);
+            voraussetzungCount++;
+        }
+
     </script>
 {% endblock jsBlock %}
 
@@ -51,7 +80,21 @@
 {% endblock beauftragter %}
 
 {% block voraussetzung %}
-    {{ form_row(form.modulVoraussetzung) }}
+    <h4 style="font-weight: bold">Modulvoraussetzungen (formal)</h4>
+    <ul id="voraussetzung-fields-list" data-prototype=
+    "{% filter escape %}
+        {% include 'FHBingenMHBBundle:Prototypes:listItem.html.twig' with { 'items' : form.modulX.vars.prototype } %}
+        {% endfilter %}">
+
+        {% for voraussetzungField in form.modulX %}
+            <li>
+                {{ form_errors(voraussetzungField) }}
+                {{ form_widget(voraussetzungField) }} {# TODO: break entfernen -> form_widget überschreiben? #}
+                <a href="#" onclick="jQuery(this).parent().remove()">Voraussetzung entfernen</a>
+            </li>
+        {% endfor %}
+    </ul>
+    <a style="padding-left: 40px" id="add-another-voraussetzung">Voraussetzung hinzufügen</a>
 {% endblock voraussetzung %}
 
 {% block lehrende %}
