--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulDeaktivierung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulDeaktivierung.html.twig
@@ -65,7 +65,9 @@
                         {'modulID': veranstaltung.getModulID(),'studiengangID': name.getStudiengangID()}) }}">In {{ name.__toString() }}
                             deaktivieren</a><br/>
                         {% endfor %}
+                        {% if stgZuModul[count]|length != 1 %}
                         <a href=" {{ path('modulDeaktivierung', {'modulID': veranstaltung.getModulID()}) }}">Modul deaktivieren alle Studiengänge</a>
+                        {% endif %}
                     </td>
                 </tr>
                 {% set count = count +1 %}
