--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/benutzerErstellen.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/benutzerErstellen.html.twig
@@ -18,7 +18,7 @@
         });
     </script>
 
-    <h3>User anlegen/bearbeiten</h3>
+    <h3>Benutzer anlegen/bearbeiten</h3>
 
     <div class="table-responsive">
         {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
