--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
@@ -50,7 +50,7 @@
             <ul class="nav navbar-nav pull-right">
                 <li class="dropdown">
                     <a href="#" id="nbAcctDD" class="dropdown-toggle" data-toggle="dropdown">
-                        {{ app.user.username }}
+                        "Angemeldet: {{ app.user.username }}
                     </a>
                     <ul class="dropdown-menu pull-right">
                         <li>
